// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography (Native) > renders Blockquote 1`] = `
<span
  className=""
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_light is_Theme"
      style={
        {
          "color": "var(--color)",
          "display": "contents",
        }
      }
    >
      <span
        className="is_Blockquote font_unset _dsp-inline _bxs-border-box _ww-break-word _ws-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _col-color _borderLeftWidth-2px _borderLeftColor-borderColor _fst-italic _borderLeftStyle-solid"
        style={{}}
      >
        Blockquote
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Typography (Native) > renders LeadText 1`] = `
<span
  className="t_unmounted"
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_light is_Theme"
      style={
        {
          "color": "var(--color)",
          "display": "contents",
        }
      }
    >
      <span
        className="is_LeadText font_unset _dsp-inline _bxs-border-box _ww-break-word _ws-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _col-mutedForegr3422748"
        style={{}}
      >
        Lead text
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Typography (Native) > renders MutedText 1`] = `
<span
  className=""
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_light is_Theme"
      style={
        {
          "color": "var(--color)",
          "display": "contents",
        }
      }
    >
      <span
        className="is_MutedText font_unset _dsp-inline _bxs-border-box _ww-break-word _ws-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _col-mutedForegr3422748"
        style={{}}
      >
        Muted text
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Typography (Native) > renders TypographyText 1`] = `
<span
  className="t_unmounted"
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_light is_Theme"
      style={
        {
          "color": "var(--color)",
          "display": "contents",
        }
      }
    >
      <span
        className="is_TypographyText font_unset _dsp-inline _bxs-border-box _ww-break-word _ws-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _col-color"
        style={{}}
      >
        Some text
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Typography (Native) > renders a Heading with default level 1`] = `
<span
  className="t_unmounted"
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_light is_Theme"
      style={
        {
          "color": "var(--color)",
          "display": "contents",
        }
      }
    >
      <span
        className="is_Heading font_heading _dsp-inline _bxs-border-box _ww-break-word _ff-f-family _fontWeight-f-weight-8 _ls-f-letterSpa1360334198 _fontSize-f-size-8 _lh-f-lineHeigh112927 _col-color _userSelect-auto _ws-normal _mt-0px _mr-0px _mb-0px _ml-0px"
        role="heading"
        style={{}}
      >
        Heading
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Typography (Native) > renders a Heading with level 1 1`] = `
<span
  className=""
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_light is_Theme"
      style={
        {
          "color": "var(--color)",
          "display": "contents",
        }
      }
    >
      <span
        className="is_Heading font_heading _dsp-inline _bxs-border-box _ww-break-word _ff-f-family _fontWeight-f-weight-8 _ls-f-letterSpa1360334198 _fontSize-f-size-8 _lh-f-lineHeigh112927 _col-color _userSelect-auto _ws-normal _mt-0px _mr-0px _mb-0px _ml-0px"
        level={1}
        role="heading"
        style={{}}
      >
        Heading
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;
